force-app/main/default/objects/ProdMainSKUDetail__c/ProdMainSKUDetail__c.object-meta.xml
<CustomObject>
    <label>Prod Main SKU Detail</label>
    <nameField>
        <displayFormat>PMSD-{00000000}</displayFormat>
        <label>RowNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prod Main SKU Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>