force-app/main/default/objects/ProdMainSKUDetail__c/fields/CompositeKey__c.field-meta.xml
<CustomField>
    <fullName>CompositeKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Key for SKU detail patameters duplicate check</description>
    <externalId>true</externalId>
    <label>Composite Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>