force-app/main/default/objects/ProdMainSKUDetail__c/fields/ProdMainSKU__c.field-meta.xml
<CustomField>
    <fullName>ProdMainSKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductMain SKU</label>
    <referenceTo>ProducMainSKU__c</referenceTo>
    <relationshipLabel>Prod Main SKU Details</relationshipLabel>
    <relationshipName>Prod_Main_SKU_Details</relationshipName>
    <type>Lookup</type>
</CustomField>