force-app/main/default/objects/ProdMainSKUDetail__c/fields/ProdTechRefDetails__c.field-meta.xml
<CustomField>
    <fullName>ProdTechRefDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU Param Value</label>
    <referenceTo>ProdTechRefDetails__c</referenceTo>
    <relationshipLabel>Prod Main SKU Details</relationshipLabel>
    <relationshipName>Prod_Main_SKU_Details</relationshipName>
    <type>Lookup</type>
</CustomField>