force-app/main/default/objects/ProdMainSKUDetail__c/fields/ProductGroupErpId__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupErpId__c</fullName>
    <formula>ProdMainSKU__r.Product2Id__r.ID_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group ERP ID</label>
    <type>Text</type>
</CustomField>