force-app/main/default/objects/ProdMainSKUDetail__c/fields/SKUParam__c.field-meta.xml
<CustomField>
    <fullName>SKUParam__c</fullName>
    <formula>ProdTechRefDetails__r.Object__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU Param</label>
    <type>Text</type>
</CustomField>