force-app/main/default/objects/ProdMainSKUDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ProdMainSKU__c</columns>
    <columns>SKUParam__c</columns>
    <columns>ProdTechRefDetails__c</columns>
    <columns>CompositeKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>